# easy-env

./: .gitignore  README.md
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tasks.rs
